styles/style.css
* {
  box-sizing: border-box;
}

html {
  /* base comment style for
   * rem calculations */
  font-size: 10px;
}

body {
  padding-left: 5vw;
  padding-right: 5vw;
  height: 100%;
  /* Base color is #0a0b0d
  *  complementary is #14120F */
  background-color: #0A0B0D;
  color: #FFFFFF;
      
}

header {
  position: relative;
  width: 100%;
  min-height: calc(10vh + 3vw);
  text-align: center;
  /* border: 2px red solid; */
}

header h1 {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: #ffffff;
  font-family: 'Source Sans Pro', sans-serif;
  font-size: calc(2rem + 3vw);
}

main {
  width: 100%;
  min-height: 80vh;
  /* border: 2px red solid; */
}

#galileo-pic {
  max-width: 100%;
  height: auto;
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 2vh;
  border-radius: 5px;
  /*
  border: 2vw solid #082A37;
  -webkit-border-radius: 2vw;
  -moz-border-radius: 2vw;
  border-radius: 2vw;
  */
}

#caption {
  position: relative;
  width: 100%;
  margin-top: 1.5vh;
  margin-bottom: 2vh;
  overflow: hidden;
  min-height: calc(3.8rem + 2vh)
}

#caption span {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: calc(1rem + .5vw);
  max-width: 207px;
  line-height: 1.4rem;
}

#info {
  color: #FFFFFF;
  font-size: calc(1.3rem + .3vw);
  padding-top: 4vh;
  padding-left: 4vw;
  padding-right: 4vw;
  padding-bottom: 2vh;
  font-family: 'Merriweather', serif;
  line-height: calc(20px + .3vh);
}

#info span {
  font-weight: bold;
}

footer {
  position: relative;
  width: 100%;
  min-height: 10vh;
  /* border: 2px red solid; */
}

footer a {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

a {
  text-decoration: underline;
  color: #FFFFFF;
  
}

/*
a {
  color: #FFFFFF;
  text-decoration: underline #082A37 .3rem;
}

*/
a:visited {
  color: #78766A;
  text-decoration: none;
}

#sign {
  font-family: 'Pacifico', cursive;
  font-size: 2rem;
}

@media screen and (min-width: 900px) {
  body {
    padding-left: 15vw;
    padding-right: 15vw;
  }
  #caption span {
    line-height: 1.8rem;
    font-size: calc(1rem + 0.25vw);
  }
}

@media screen and (min-width: 1000px) {
  body {
    padding-left: 20vw;
    padding-right: 20vw;
  }
}

@media screen and (min-width: 2000px) {
  body {
    padding-left: 30vw;
    padding-right: 30vw;
  }
}

